<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/top_bar_layout"/>
        <ImageView
            android:layout_width="@dimen/book_picture_width"
            android:layout_height="@dimen/book_picture_width"
            android:scaleType="centerInside"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:src="@drawable/icon_add_img"
            android:id="@+id/iv_add_book_picture"/>
        <EditText
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:layout_height="@dimen/add_book_edit_view_height"
            android:layout_marginTop="@dimen/add_book_padding_top"
            android:hint="@string/book_name"
            android:id="@+id/et_book_name"/>

        <EditText
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:layout_height="@dimen/add_book_edit_view_height"
            android:layout_marginTop="@dimen/add_book_padding_top"
            android:hint="@string/edit_isbn"
            android:id="@+id/et_add_book_isbn"/>
        <TextView
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:layout_height="@dimen/add_book_edit_view_height"
            android:layout_marginTop="@dimen/add_book_padding_top"
            android:hint="@string/book_type"
            android:id="@+id/tv_book_type"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_book_edit_view_height"
            android:id="@+id/tv_book_interchange_address"
            android:hint="@string/book_interchange_address"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:layout_marginTop="@dimen/add_book_padding_top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_book_edit_view_height"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:orientation="horizontal">
            <EditText
                android:layout_width="@dimen/price_width"
                android:layout_height="match_parent"
                android:id="@+id/et_book_price"
                android:hint="@string/book_price"
                android:gravity="center|right" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/book_price_yuan"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/main_color"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_book_edit_view_height"
            android:id="@+id/et_book_description"
            android:hint="@string/book_description"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:layout_marginTop="@dimen/add_book_padding_top"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:background="@color/main_color"
            android:paddingLeft="@dimen/padding_left"
            android:id="@+id/btn_submit"
            android:text="@string/book_submit"
            android:layout_marginRight="@dimen/padding_right"
            android:layout_marginLeft="@dimen/padding_right"
            android:gravity="center"
            android:paddingRight="@dimen/padding_left"/>



    </LinearLayout>

</ScrollView>