<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/top_bar_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="@dimen/layout_padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:orientation="vertical">
            <com.deng.johndon.gdutbookcrossing.view.CircleImageView
                android:layout_width="@dimen/user_avatar_width"
                android:layout_gravity="center"
                android:src="@drawable/default_icon_header"
                android:id="@+id/ci_user_avatar"
                android:layout_height="@dimen/user_avatar_width" />
            <EditText
                android:layout_marginTop="@dimen/layout_padding_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_sign_width"
                android:textSize="@dimen/edit_sign_text_size"
                android:gravity="left|center_vertical"
                android:id="@+id/et_user_name"
                android:hint="@string/sign_username"/>
            <EditText
                android:layout_marginTop="@dimen/layout_padding_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_sign_width"
                android:textSize="@dimen/edit_sign_text_size"
                android:gravity="left|center_vertical"
                android:inputType="textPassword"
                android:id="@+id/et_user_password"
                android:hint="@string/sign_password"/>
            <EditText
                android:layout_marginTop="@dimen/layout_padding_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_sign_width"
                android:textSize="@dimen/edit_sign_text_size"
                android:gravity="left|center_vertical"
                android:id="@+id/et_user_phone"
                android:hint="@string/sign_phone"/>
            <EditText
                android:layout_marginTop="@dimen/layout_padding_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_sign_width"
                android:textSize="@dimen/edit_sign_text_size"
                android:gravity="left|center_vertical"
                android:id="@+id/et_user_email"
                android:hint="@string/sign_email"/>
            <TextView
                android:layout_marginTop="@dimen/layout_padding_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_sign_width"
                android:textSize="@dimen/edit_sign_text_size"
                android:gravity="left|center_vertical"
                android:id="@+id/tv_user_academy"
                android:hint="@string/sign_academy"/>
            <TextView
                android:layout_marginTop="@dimen/layout_padding_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_sign_width"
                android:textSize="@dimen/edit_sign_text_size"
                android:gravity="left|center_vertical"
                android:id="@+id/tv_user_gender"
                android:hint="@string/sign_gender"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_sign_width"
                android:background="@color/main_color"
                android:id="@+id/btn_user_sign_in"
                android:text="@string/sign_in"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>