<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/top_bar_layout"
        android:id="@+id/ll_top"/>
   <ScrollView
       android:layout_width="match_parent"
       android:layout_below="@+id/ll_top"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="wrap_content">

           <ImageView
               android:layout_width="match_parent"
               android:layout_height="@dimen/book_image_height"
               android:scaleType="fitXY"
               android:id="@+id/iv_book_pic"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/book_detail_item_height"
               android:orientation="horizontal"
               android:paddingRight="@dimen/padding_right"
               android:paddingLeft="@dimen/padding_left"
               android:layout_marginTop="@dimen/add_book_padding_top">
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:textSize="@dimen/text_main_size"
                   android:textColor="@color/text_main_color"
                   android:text="@string/book_name"
                   android:layout_height="match_parent"
                   android:gravity="center|left"
                   android:id="@+id/tv_book_name"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:textColor="@color/text_main_color"
                   android:layout_height="match_parent"
                   android:gravity="center|left"
                   android:textSize="@dimen/text_main_size"
                   android:text="@string/book_isbn"
                   android:id="@+id/tv_book_isbn"/>
           </LinearLayout>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="@dimen/book_detail_item_height"
               android:text="@string/book_description"
               android:gravity="center|left"
               android:textColor="@color/text_tip_color"
               android:textSize="@dimen/text_tip_size"
               android:paddingLeft="@dimen/padding_left"
               android:paddingRight="@dimen/padding_right"
               android:layout_marginTop="@dimen/add_book_padding_top"/>
           <TextView
               android:layout_width="match_parent"
               android:paddingLeft="@dimen/padding_left"
               android:paddingRight="@dimen/padding_right"
               android:id="@+id/tv_book_detail"
               android:textColor="@color/text_main_color"
               android:textSize="@dimen/text_main_size"
               android:layout_height="wrap_content" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/text_tip_color"
               android:layout_marginTop="@dimen/login_padding_top"
               android:layout_marginLeft="@dimen/padding_right"
               android:text="@string/book_detail_comment"
               android:textSize="@dimen/text_tip_size"
               android:gravity="left"/>
           <android.support.v7.widget.RecyclerView
               android:layout_width="match_parent"
               android:paddingLeft="@dimen/padding_left"
               android:paddingRight="@dimen/padding_right"
               android:layout_marginTop="@dimen/add_book_padding_top"
               android:id="@+id/rv_comment"
               android:layout_height="match_parent"/>
       </LinearLayout>
   </ScrollView>
    
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/book_detail_bottom_height"
       android:orientation="horizontal"
       android:background="@color/main_color"
       android:layout_marginBottom="0dp"
       android:layout_marginEnd="0dp"
       android:layout_alignParentBottom="true"
       android:layout_marginRight="0dp">
       <TextView
           android:layout_width="0dp"
           android:layout_weight="1"
           android:text="@string/book_detail_price"
           android:gravity="center"
           android:id="@+id/tv_book_price"
           android:textColor="@color/white"
           android:layout_height="match_parent" />
       <TextView
           android:layout_width="0dp"
           android:layout_weight="2"
           android:text="@string/book_detail_book"
           android:gravity="center"
           android:id="@+id/tv_order_book"
           android:background="@color/submit_color"
           android:textColor="@color/submit_text_color"
           android:textStyle="bold"
           android:layout_height="match_parent" />
   </LinearLayout>
</RelativeLayout>