<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_marginTop="@dimen/padding_left"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/padding_left"
            android:layout_height="@dimen/login_button_height">
            <com.deng.johndon.gdutbookcrossing.view.CircleImageView
                android:layout_width="@dimen/login_button_height"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:id="@+id/cv_user_icon"
                android:src="@drawable/default_icon_header"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_main_size"
                android:textColor="@color/text_main_color"
                android:gravity="center|left"
                android:paddingLeft="@dimen/padding_left"
                android:layout_marginRight="@dimen/padding_left"
                android:layout_toRightOf="@+id/cv_user_icon"
                android:text="@string/has_not_login"
                android:id="@+id/tv_username"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/text_main_color"
                android:textSize="@dimen/text_main_size"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:visibility="invisible"
                android:id="@+id/tv_login_out"
                android:paddingRight="@dimen/add_book_padding_top"
                android:text="@string/user_login_out"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:paddingLeft="@dimen/padding_left"
            android:background="@color/text_tip_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_fragment_item"
            android:paddingLeft="@dimen/padding_left"
            android:gravity="center|left"
            android:id="@+id/tv_my_release_book"
            android:text="@string/my_release_book"
            android:textColor="@color/text_main_color"
            android:textSize="@dimen/text_main_size"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:paddingLeft="@dimen/padding_left"
            android:background="@color/text_tip_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_fragment_item"
            android:paddingLeft="@dimen/padding_left"
            android:gravity="center|left"
            android:id="@+id/tv_my_order_book"
            android:text="@string/my_order_book"
            android:textColor="@color/text_main_color"
            android:textSize="@dimen/text_main_size"/>
    </LinearLayout>


</ScrollView>